add_library( opgen-epsilon

   P2ElementwiseEpsilonAnnulusMap_0_0.cpp
   P2ElementwiseEpsilonAnnulusMap_0_0.hpp
   P2ElementwiseEpsilonAnnulusMap_0_1.cpp
   P2ElementwiseEpsilonAnnulusMap_0_1.hpp
   P2ElementwiseEpsilonAnnulusMap_1_0.cpp
   P2ElementwiseEpsilonAnnulusMap_1_0.hpp
   P2ElementwiseEpsilonAnnulusMap_1_1.cpp
   P2ElementwiseEpsilonAnnulusMap_1_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_0.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_0.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_1.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_2.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_2.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_0.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_0.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_1.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_2.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_2.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_0.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_0.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_1.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_2.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_2.hpp
   P2ElementwiseEpsilon_0_0.cpp
   P2ElementwiseEpsilon_0_0.hpp
   P2ElementwiseEpsilon_0_1.cpp
   P2ElementwiseEpsilon_0_1.hpp
   P2ElementwiseEpsilon_0_2.cpp
   P2ElementwiseEpsilon_0_2.hpp
   P2ElementwiseEpsilon_1_0.cpp
   P2ElementwiseEpsilon_1_0.hpp
   P2ElementwiseEpsilon_1_1.cpp
   P2ElementwiseEpsilon_1_1.hpp
   P2ElementwiseEpsilon_1_2.cpp
   P2ElementwiseEpsilon_1_2.hpp
   P2ElementwiseEpsilon_2_0.cpp
   P2ElementwiseEpsilon_2_0.hpp
   P2ElementwiseEpsilon_2_1.cpp
   P2ElementwiseEpsilon_2_1.hpp
   P2ElementwiseEpsilon_2_2.cpp
   P2ElementwiseEpsilon_2_2.hpp
   P2VectorElementwiseEpsilon.cpp
   P2VectorElementwiseEpsilon.hpp
   P2VectorElementwiseEpsilonAnnulusMap.cpp
   P2VectorElementwiseEpsilonAnnulusMap.hpp
   P2VectorElementwiseEpsilonIcosahedralShellMap.cpp
   P2VectorElementwiseEpsilonIcosahedralShellMap.hpp
   P2VectorElementwiseEpsilonP1ViscosityAnnulusMap.cpp
   P2VectorElementwiseEpsilonP1ViscosityAnnulusMap.hpp
   P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap.cpp
   P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap.hpp
   P2VectorElementwiseEpsilonP1ViscosityParametricP2Map.cpp
   P2VectorElementwiseEpsilonP1ViscosityParametricP2Map.hpp
   P2VectorElementwiseEpsilonRotationAnnulusMap.cpp
   P2VectorElementwiseEpsilonRotationAnnulusMap.hpp
   P2VectorElementwiseEpsilonRotationIcosahedralShellMap.cpp
   P2VectorElementwiseEpsilonRotationIcosahedralShellMap.hpp
   P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap.cpp
   P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap.hpp
   P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap.cpp
   P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap.hpp
   P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap.cpp
   P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap.hpp
   P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap.cpp
   P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap.hpp
)
target_link_libraries( opgen-epsilon PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-epsilon PRIVATE

      avx/P2ElementwiseEpsilonAnnulusMap_0_0_apply_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_1_apply_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_0_apply_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_apply_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_2_apply_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_2_apply_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_0_apply_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_1_apply_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_apply_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_apply_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_apply_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_apply_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_apply_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_apply_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_apply_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationAnnulusMap_apply_P2VectorElementwiseEpsilonRotationAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationIcosahedralShellMap_apply_P2VectorElementwiseEpsilonRotationIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_apply_P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_apply_P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_apply_P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_apply_P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_3D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_toMatrix_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_1_toMatrix_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_0_toMatrix_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_toMatrix_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrix_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrix_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrix_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrix_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_2_toMatrix_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrix_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrix_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrix_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrix_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_2_toMatrix_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_0_toMatrix_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_1_toMatrix_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_toMatrix_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_toMatrix_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_toMatrix_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_toMatrix_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_toMatrix_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationAnnulusMap_toMatrix_P2VectorElementwiseEpsilonRotationAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonRotationIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_toMatrix_P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_toMatrix_P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrix_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrix_P2VectorElementwiseEpsilon_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseEpsilonAnnulusMap_0_0_apply_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_1_apply_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_0_apply_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_apply_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_2_apply_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_2_apply_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_0_apply_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_1_apply_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_apply_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_apply_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_apply_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_apply_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_apply_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_apply_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_apply_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationAnnulusMap_apply_P2VectorElementwiseEpsilonRotationAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationIcosahedralShellMap_apply_P2VectorElementwiseEpsilonRotationIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_apply_P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_apply_P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_apply_P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_apply_P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-epsilon PRIVATE

      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_apply_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_toMatrix_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_1_apply_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_1_toMatrix_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_0_apply_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_0_toMatrix_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_apply_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_toMatrix_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrix_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrix_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrix_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrix_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_2_apply_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_2_toMatrix_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrix_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrix_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrix_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrix_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_2_apply_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_2_toMatrix_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_0_apply_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_0_toMatrix_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_1_apply_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_1_toMatrix_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_apply_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_toMatrix_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_apply_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_toMatrix_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_apply_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_apply_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_toMatrix_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_apply_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_apply_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_apply_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_toMatrix_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_toMatrix_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationAnnulusMap_apply_P2VectorElementwiseEpsilonRotationAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationAnnulusMap_toMatrix_P2VectorElementwiseEpsilonRotationAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationIcosahedralShellMap_apply_P2VectorElementwiseEpsilonRotationIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonRotationIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_apply_P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_toMatrix_P2VectorElementwiseEpsilonRotationP0ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_apply_P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonRotationP0ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_apply_P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_toMatrix_P2VectorElementwiseEpsilonRotationP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_apply_P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonRotationP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrix_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrix_P2VectorElementwiseEpsilon_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-epsilon PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-epsilon PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-epsilon PUBLIC cxx_std_17)
endif ()
